<resources>
    <string name="app_name">NovelToon</string>
    <string name="logo">Logo</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signin">SignIn</string>
    <string name="register">register</string>
    <string name="signup">signup</string>
    <string name="name">name</string>
    <string name="confirmpassword">confirmpassword</string>
    <string name="welcome_to_noveltoon">Welcome to NovelToon</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="back_to_login">Back to Login</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama :</string>
    <string name="Email">Email :</string>
    <string name="update_profil">Update Profil</string>
    <string name="update_passowrd">Update Passowrd</string>
    <string name="update_profile">Update Profile</string>
    <string name="insert_nama">Insert Nama</string>
    <string name="insert_email">Insert Email</string>
    <string name="save">Save</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password :</string>
    <string name="insert_password">Insert Password</string>
    <string name="new_password">New Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="back">Back</string>
    <string name="umur">Umur :</string>
    <string name="insert_umur">Insert Umur</string>
    <string name="umurprofil">Umur :</string>

</resources>