<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    tools:context=".updateprofile">

    <ImageView
        android:id="@+id/AmericanPride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/americanpride"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/updateprofil"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/update_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:id="@+id/updatenama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="329dp" />

    <EditText
        android:id="@+id/fieldupdatenama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:hint="@string/insert_nama"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/updatenama"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/updateemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="413dp" />

    <EditText
        android:id="@+id/fieldupdateemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/updateemail"
        app:layout_constraintTop_toBottomOf="@+id/fieldupdatenama"
        tools:ignore="MissingConstraints,UnknownId" />

    <Button
        android:id="@+id/button_saveprofil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="517dp" />
</androidx.constraintlayout.widget.ConstraintLayout>