<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    tools:context=".updatepassword">

    <ImageView
        android:id="@+id/AmericanPride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/americanpride"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/updatepassoword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/update_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:id="@+id/passwordlama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/old_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="329dp" />

    <EditText
        android:id="@+id/fieldpassowrdlama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passwordlama"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/passwordbaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/new_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlama"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/fieldnewpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passwordlama"
        app:layout_constraintTop_toBottomOf="@+id/fieldpassowrdlama"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
        android:id="@+id/confirmpasswordbaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/confirm_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordbaru"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/Fieldconfirmpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/confirmpasswordbaru"
        app:layout_constraintTop_toBottomOf="@+id/fieldnewpass"
        tools:ignore="MissingConstraints,TextFields,UnknownId" />

    <Button
        android:id="@+id/button_savepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="551dp" />
</androidx.constraintlayout.widget.ConstraintLayout>