<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    tools:context=".profile">

    <ImageView
        android:id="@+id/AmericanPride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/americanpride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmericanPride"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Nama"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/fieldnama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <TextView
        android:id="@+id/fieldnama"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/Nama"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Nama"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Updateprofil"
        app:layout_constraintEnd_toStartOf="@+id/fieldemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nama"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/fieldemail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Updateprofil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/fieldnama"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_Updateprofil"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/update_profil"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_Updatepassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_Updatepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/update_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Updateprofil"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>